<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="game_over_message">Game Over</string>
    <string name="app_name">Ithaka Board Game</string>
    <string name="redirect_activity_is_missing_message">Redirect activity is missing!</string>
    <string name="title_activity_splash">Ithaka Board Game</string>
    <string name="title_activity_game">Ithaka Board Game</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="new_game_menu">New Game</string>
    <string name="help_menu">Help</string>
    <string name="about_menu">About</string>
    <string name="about_text">Ithaka Board Game was invented by L. Lynn Smith in 2002. Android version was implemented by Velbazhd Software LLC as a programming tutorial.</string>
    <string name="help_text">Ithaka is played on a four by four square grid with three pieces in each of four colors. The pieces are initially arranged so that the three pieces of each color occupy a corner space and the two adjacent edge spaces.
\n\n
All of the pieces are shared by both players. Each player, in turn, moves one piece any number of spaces in a straight orthogonal or diagonal line over as many empty spaces as is desired, with the following restrictions:
\n\n
1) The piece moved must not be the same piece moved on your opponent\'s most recent turn;
\n\n
2) The piece moved must begin next to a piece of the same color;
\n\n
Win either by getting three pieces of one color in a row or by leaving your opponent with no available moves.
\n\n
The Ithaka Rules are available from the World of Abstract Games Web Site, and an Ithaka ZRF is also available for play with Zillions of Games.</string>
    <string name="single_player_game_label">Single Player Game</string>
    <string name="join_bluetooth_gaem_label">Join Bluetooth Game</string>
    <string name="exit_game_label">Exit</string>
    <string name="create_bluetooth_gaem_label">Create Bluetooth Game</string>
    <string name="bluetooth_is_not_available">Bluetooth is not available!</string>
    <string name="server_is_not_available">Server is not available!</string>
    <string name="double_player_game_label">Two Players Game</string>
    <string name="choose_server_title">Choose Bluetooth Server: </string>
    <string name="player_lable">Player: </string>

</resources>